aws-alb-ingress/aws-alb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-alb-dev-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:792248914698:certificate/e40f8d27-fea1-4eaf-a90a-d2b0df1c05f5
spec:
  rules:
    - host: api.thangca.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          # - path: /app2
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: app2-service
          #       port:
          #         number: 80
